--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   redis:
     image: redis:alpine
-    container_name: fila-redis
+    container_name: queue-redis
     ports:
       - "6379:6379"
     volumes:
