--- a/package.json
+++ b/package.json
@@ -1,31 +1,20 @@
 {
-  "name": "nextjs-redis_open-queue",
-  "version": "0.1.0",
-  "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "docker:start": "docker compose up -d",
-    "docker:stop": "docker compose down"
+    "docker:start": "docker compose up --build -d",
+    "docker:stop": "docker compose down --remove-orphans",
+    "docker:reset:redis": "docker exec queue-redis redis-cli FLUSHALL",
+    "prod": "npm run docker:start",
+    "reset": "npm run docker:reset:redis && npm run docker:stop && npm run docker:start",
+    "restart": "npm run docker:stop && npm run docker:start"
   },
   "dependencies": {
     "ioredis": "^5.4.2",
     "next": "15.1.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/next": "^8.0.7",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "react-dom": "^19.0.0",
+    "swr": "^2.3.0"
   }
 }
